# invenio-workflows-tugraz

./: .editorconfig  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  usage.rst
invenio_workflows_tugraz/: __init__.py  cli.py  config.py  ext.py  generators.py  proxies.py  theses.py  types.py  workflows.py
invenio_workflows_tugraz/data/: iso6393.json  oer-workflow.excalidraw  theses-workflow.excalidraw
invenio_workflows_tugraz/imoox/: __init__.py  visiter.py  visitor.py  workflows.py
invenio_workflows_tugraz/migration_diglib_repository/: __init__.py  cli.py  convert.py
invenio_workflows_tugraz/oer/: __init__.py  convert.py  workflow.py
invenio_workflows_tugraz/openaccess/: __init__.py  api.py  config.py  convert.py  models.py  service.py  types.py  utils.py  workflow.py
invenio_workflows_tugraz/openaccess/alembic/: 4c136b376379_change_datetime_types.py  74b15cacffbc_create_openaccess_branch.py  bf15edb5b389_create_openaccess_tables.py
invenio_workflows_tugraz/publisher/: README.rst  __init__.py  convert.py  webpack.py
invenio_workflows_tugraz/publisher/assets/semantic-ui/js/invenio_workflows_tugraz_publisher/: UploadCSV.js  index.js
invenio_workflows_tugraz/teachcenter/: __init__.py  config.py  types.py  visitor.py  workflows.py
invenio_workflows_tugraz/theses/: __init__.py  api.py  cli.py  config.py  convert.py  decorators.py  jobs.py  models.py  service.py  tasks.py  theses.py  types.py  views.py
invenio_workflows_tugraz/theses/alembic/: 02845ec6893c_update_theses_tables.py  2b99bb26b381_create_theses_tables.py  937ba80502f3_change_to_pid_column_name.py  9d446c6a77e2_create_theses_branch.py  __init__.py  eca8ae6a6bc1_update_states_theses_tables.py
tests/: conftest.py  test_invenio_workflows_tugraz.py
tests/imoox/: test_imoox.py
tests/oer/: test_oer.py
tests/oer/data/: empty_contribute.json  empty_educational-description.json  empty_expected  empty_expected.json  empty_expected_contribute.json  empty_expected_educational-description.json  empty_expected_general-description.json  empty_expected_general-language.json  empty_expected_general-title.json  empty_expected_hardcoded-kquelle.json  empty_expected_hardcoded.json  empty_expected_right-url.json  empty_expected_technical-duration.json  empty_expected_technical-licenses-thumbnail.json  empty_expected_technical-location.json  empty_general-description.json  empty_general-language.json  empty_general-title.json  empty_lifecycle-datetime.json  empty_rights-url.json  empty_technical-licenses-thumbnail.json  empty_technical-location.json
tests/theses/: test_theses.py
tests/theses/data/: empty_expected.json  empty_test.xml
