[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D211", "D212", "D213",
  "DTZ007",
  "E501",
  "ERA001",
  "FIX002",
  "FA",
  "INP001",
  "N802", "N999",
  "PERF203",
  "PLR0913",
  "S101",
  "TD002", "TD003", "TD004",
  "TID252",
  "TRY300", "TRY400",
  "UP009",
  "RUF022",
]
