# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Graz University of Technology.
#
# invenio-workflows-tugraz is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-workflows-tugraz
version = attr: invenio_workflows_tugraz.__version__
description = "This package serves as a place for the workflows of the repository of the TU Graz."
long_description = file: README.rst, CHANGES.rst
keywords = invenio workflows TUGraz
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-workflows-tugraz
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=1.4.0
    invenio-search[opensearch2]>=2.1.0
    invenio-alma>=0.7.1
    invenio-campusonline>=0.1.1
    invenio-pure>=0.1.1
    sphinx>=4.5

[options.entry_points]
invenio_base.apps =
    invenio_workflows_tugraz = invenio_workflows_tugraz:InvenioWorkflowsTugraz
invenio_i18n.translations =
    messages = invenio_workflows_tugraz

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_workflows_tugraz --cov-report=term-missing
testpaths = docs tests invenio_workflows_tugraz
