# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2025 Graz University of Technology.
#
# invenio-workflows-tugraz is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-workflows-tugraz
version = attr: invenio_workflows_tugraz.__version__
description = "Package serves as a place for the workflows of the repository of the TU Graz."
long_description = file: README.rst, CHANGES.rst
keywords = invenio workflows TUGraz
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-workflows-tugraz
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-alma>=0.7.1
    invenio-campusonline>=0.1.1
    invenio-jobs>=3.0.0
    invenio-moodle>=1.0.0
    invenio-pure>=0.1.1
    invenio-records-lom>=0.18.0
    invenio-records-marc21>=0.13.0

[options.extras_require]
tests =
    invenio-app>=2.0.0
    invenio-search[opensearch2]>=2.1.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.0
    ruff>=0.4.10
    sphinx>=4.5

[options.entry_points]
flask.commands =
    workflows = invenio_workflows_tugraz.cli:workflows
invenio_base.apps =
    invenio_workflows_tugraz = invenio_workflows_tugraz:InvenioWorkflowsTugraz
invenio_base.api_apps =
    invenio_workflows_tugraz = invenio_workflows_tugraz:InvenioWorkflowsTugraz
invenio_base.blueprints =
    invenio_workflows_tugraz_theses = invenio_workflows_tugraz.theses:create_blueprint
invenio_celery.tasks =
    invenio_workflows_tugraz_theses = invenio_workflows_tugraz.theses.tasks
invenio_db.alembic =
    invenio_workflows_tugraz_theses = invenio_workflows_tugraz.theses:alembic
    invenio_workflows_tugraz_openaccess = invenio_workflows_tugraz.openaccess:alembic
invenio_db.models =
    invenio_workflows_tugraz_theses = invenio_workflows_tugraz.theses.models
    invenio_workflows_tugraz_openaccess = invenio_workflows_tugraz.openaccess.models
invenio_i18n.translations =
    messages = invenio_workflows_tugraz
invenio_jobs.jobs =
    theses_status_arch = invenio_workflows_tugraz.theses.jobs:StatusArchJob
    theses_status_pub = invenio_workflows_tugraz.theses.jobs:StatusPubJob

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_workflows_tugraz --cov-report=term-missing
testpaths = docs tests invenio_workflows_tugraz
